added grid for gallary

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 			<div class="profile-stats">
 
 				<ul>
-					<li><span class="profile-stat-count">549</span> posts</li>
-					<li><span class="profile-stat-count">45 682</span> followers</li>
-					<li><span class="profile-stat-count">1</span> following</li>
+					<dl><span class="profile-stat-count">549</span> posts</dl>
+					<dl><span class="profile-stat-count">45 682</span> followers</dl>
+					<dl><span class="profile-stat-count">1</span> following</dl>
 				</ul>
 
 			</div>
